# sideshell

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Makefile  PUBLISHING.md  README.md  README_UV.md  ROADMAP.md  SECURITY.md  pyproject.toml  pytest.ini  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
extensions/: API.md
extensions/intellij/: .gitignore  DEVELOPMENT.md  build.gradle.kts  settings.gradle.kts
extensions/intellij/src/main/kotlin/com/sideshell/terminal/: SideshellAppLifecycleListener.kt  SideshellBridgeService.kt  SideshellConfigurable.kt  SideshellSettings.kt  SideshellStartupActivity.kt  TerminalManagerService.kt
extensions/vscode/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  sideshell-terminal-0.1.0.vsix
extensions/vscode/src/: bridge.ts  extension.ts  terminal-manager.ts
sideshell_mcp/: __init__.py  __main__.py  monitor_worker.py  server.py
sideshell_mcp/backends/: __init__.py  base.py  detection.py  ghostty_backend.py  ghostty_tmux_backend.py  ide_bridge.py  intellij_backend.py  iterm2_backend.py  kitty_backend.py  maquake_backend.py  tmux_backend.py  vscode_backend.py  wezterm_backend.py
site/: CNAME  index.html  llms.txt
tests/: __init__.py  conftest.py  live_ghostty_check.py  live_ide_check.py  live_server_direct.py  test_advanced.py  test_base.py  test_detection.py  test_ghostty_tmux_unit.py  test_ide_bridge.py  test_integration.py  test_intellij_backend.py  test_intellij_integration.py  test_is_ai_session.py  test_iterm2_backend.py  test_iterm2_visual.py  test_kitty_backend.py  test_kitty_unit.py  test_maquake_backend.py  test_plugin_integration.py  test_return_focus_visual.py  test_server.py  test_server_direct.py  test_server_unit.py  test_tmux_backend.py  test_tmux_unit.py  test_tmux_visual.py  test_vscode_backend.py  test_wezterm_backend.py  test_wezterm_visual.py
